edition = "2024";

package grpcauthapp;

option go_package = "github.com/ardanlabs/service/app/domain/grpcauthapp";

// The authentication service definition.
service Auth {
  // Generate a token for a given key ID.
  rpc Token(TokenRequest) returns (TokenResponse);

  // Authenticate a request using a bearer token.
  rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);

  // Authorize a request based on user claims and a rule.
  rpc Authorize(AuthorizeRequest) returns (AuthorizeResponse);
}

// Request message for generating a token.
message TokenRequest {
  string kid = 1;
}

// Response message for token generation.
message TokenResponse {
  string token = 1;
}

// Claims represents the authorization claims transmitted via a JWT.
message Claims {
  // Registered claims
  string issuer = 1;
  string subject = 2;
  repeated string audience = 3;
  int64 expires_at = 4;
  int64 not_before = 5;
  int64 issued_at = 6;
  string id = 7;

  // Custom claims
  repeated string roles = 8;
}

// Request message for authentication.
message AuthenticateRequest {
  string token = 1;
}

// Response message for authentication.
message AuthenticateResponse {
  string user_id = 1;
  repeated string roles = 2;
  string subject = 3;
  // Claims contains the JWT claims.
  Claims claims = 4;
}

// Request message for authorization.
message AuthorizeRequest {
  string user_id = 1;
  Claims claims = 2;
  string rule = 3;
}

// Response message for authorization.
message AuthorizeResponse {
}
